// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component disabled operation button variant matches snapshot 1`] = `
<button
  className="sc-bdnxRM eAvfgK"
  disabled={true}
>
  Click Me
</button>
`;

exports[`Button Component operation button variant matches snapshot 1`] = `
<button
  className="sc-bdnxRM eAvfgK"
  disabled={false}
>
  Click Me
</button>
`;

exports[`Button Component selected number button variant matches snapshot 1`] = `
<button
  className="sc-bdnxRM hZjSyD"
  disabled={false}
>
  Click Me
</button>
`;

exports[`Button Component unselected number button variant matches snapshot 1`] = `
<button
  className="sc-bdnxRM kHcIqf"
  disabled={false}
>
  Click Me
</button>
`;
